<resources>
    <string name="app_name">胡萝卜</string>
    <string name="prepare_to_record">准备开始</string>
    <string name="start">开始</string>
    <string name="holdon">停止</string>
    <string name="app_tip">确保胡萝卜可后台运行</string>
    <string name="start_service_tip">点击开始启动胡萝卜服务</string>
    <string name="service_starting">启动中</string>
    <string name="service_not_running">服务未启动</string>
    <string name="service_is_running">服务已启动</string>
    <string name="service_running">已启动</string>
    <string name="stop_service">点击停止注销服务</string>
    <string name="carrot_stoped">胡萝卜已停止运行</string>
    <string name="feature_value_empty">特征强度：--</string>
    <string name="sensitivity_avg">灵敏度α：0.02</string>
    <string name="sensitivity_std">灵敏度β：5-8</string>
    <string name="input_src_phone">特征源：手机</string>
    <string name="input_src_headset">特征源：耳机</string>
    <string name="notice_mode_phone">提醒方式：震动</string>
    <string name="notice_mode_headset">提醒方式：耳机铃声</string>
    <string name="model_vername">模型版本：--</string>
    <string name="copyright">芝麻创意 · 胡萝卜 1.0.8\n彼采萧兮，一日不见，如三秋兮。</string>
    <string name="noise_auto_switch">自动降噪</string>
    <string name="run_log_switch">启用日志</string>
    <string name="updatemodel_title">模型升级</string>
    <string name="updatemodel_tip">有新的预测模型可供下载，更新模型有助于提高识别准确度</string>
    <string name="newversionfunc_title">胡萝卜是什么</string>
    <string name="newversionfunc_tip">胡萝卜专为受打呼噜困扰人士开发，您只需开始服务，App将会在识别出打呼噜声时进行提醒。\n\n为了不打扰其他人，您可佩戴耳机，提醒时手机将不会震动，您的耳机将会播放提示音。\n\n某些手机锁屏后可能会清理App，如胡萝卜运行一段时间后出现两次长震动，您可点下方链接查看如何锁定App。</string>
    <string name="appkill_title">胡萝卜未正常结束工作</string>
    <string name="appkill_tip">您上次使用的胡萝卜进程被异常结束，可能是被电源管理软件终止，您可以点击下方“锁定方法”查看如何解决此类问题；如您手动结束胡萝卜进程，清忽略此提醒。</string>
    <string name="permission_title">权限提醒</string>
    <string name="permission_tip">胡萝卜需要指定的权限才能正常工作</string>
    <string name="safetyalert_title">注意安全</string>
    <string name="safetyalert_tip">使用有线耳机时需正确佩戴，避免缠绕发生危险</string>
    <string name="attention">注意</string>
    <string name="logalert_tip">日志功能仅为调试功能，开启可能略微增加耗电。</string>
    <string name="noise_auto_tip">胡萝卜需要约3分钟时间估计环境噪声，完成后将自动开始工作。\n开启此功能有助于提高识别准确性，但在嘈杂环境下识别效果可能会变差。</string>
    <string name="ok">好</string>
    <string name="ignore">忽略</string>
    <string name="iknow">知道啦</string>
    <string name="exit">退出</string>
    <string name="lockapp">锁定方法</string>
    <string name="later">以后再说</string>
</resources>
