<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textview_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/app_tip"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/guide_layout_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textview_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_service_tip"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text="@string/start" />

        <TextView
            android:id="@+id/textview_service_run"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/service_started"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/guide_layout_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/guide_layout_1"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stop_service"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <View
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/button_stop"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text="@string/holdon" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/guide_layout_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/guide_layout_2"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textview_service_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feature_value"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/guide_layout_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/guide_layout_3"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textview_sensitivity_avg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensitivity_avg"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <TextView
            android:id="@+id/textview_sensitivity_std"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sensitivity_std"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <TextView
            android:id="@+id/textview_notice_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notice_mode"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        <TextView
            android:id="@+id/textview_model_vername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/model_vername"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <CheckBox
            android:id="@+id/run_log_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/run_log_switch"
            android:textColor="#747474" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:autoLink="web|none"
        android:gravity="center"
        android:text="@string/copyright"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>